# mapreduce_framework

w6/: .dockerignore  CMakeLists.txt  README.md  build.sh  install.sh
w6/CMakeModules/: FindConservator.cmake  FindZookeeper.cmake
w6/DockerFolder/: Dockerfile.mr_master  Dockerfile.mr_worker  README  build_docker.sh  config.yaml  copy.sh  install_docker.sh  master.cc  worker.cc
w6/docs/: design.md  workshop6.md  workshop8.md  workshop9.md
w6/protos/: sample.proto
w6/src/azure/: azLogin.sh  azuredeploy.json  getIp.sh  parameters-file
w6/src/docker/: Dockerfile.master  Dockerfile.worker
w6/src/kubernetes/: config.yaml
w6/src/master/: master.cc
w6/src/worker/: tail  worker.cc
w7/: .gitignore  CMakeLists.txt  README.md  REPORT.md  REPORT_W8.md  azure_build.sh  build.sh  client.sh  getIP.sh
w7/src/: CMakeLists.txt
w7/src/azure/: azuredeploy.json  parameters-file
w7/src/docker/: Dockerfile.master  Dockerfile.worker
w7/src/kubernetes/: azure.yaml  fail.yaml  kind.yaml  mrt19.yaml
w7/src/master/: CMakeLists.txt  dbconn.h  helpers.h  master.cc  master.h  masterimpl.cc  mrclient.h  replclient.cc  replclient.h  replserver.cc  replserver.h  requesthandler.h  tail
w7/src/protos/: mr.proto
w7/src/python/: map.py  reduce.py
w7/src/worker/: CMakeLists.txt  mrservice.h  worker.cc  worker.h  worker.h.orig  workerimpl.cc
